--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,14 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="./index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Day 2 Project</title>
+</head>
+<body>
+  <header></header>
+  <main></main>
+  <footer></footer>
+</body>
+</html>
