--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,26 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+  <link rel="stylesheet" href="./index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Second project</title>
+</head>
+
+<body>
+
+
+<header></header>
+  
+</body>
+<square-one></square-one>
+<square-two></square-two>
+<circle-one></circle-one>
+<container-two></container-two>
+<box-shadow></box-shadow>
+<container-three></container-three>
+<container-three h1></container-three>
+
+</html>
+
