--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,26 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="./index.css">
+    <meta charset="UTF-8">
+    <title> Third Project </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+
+  <body>
+    <div class="row row-1">
+      <div class="row-1-div"></div>
+    </div>
+
+    <div class="row-big row-2">
+      <span class="row-2-span">
+        Consider hiding the status bar -- and all other app UI -- while people are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it ( and the appropriate app UI ) with a single tap. Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.
+      </span>
+    </div>
+
+    <div class="row row-3"></div>
+    <div class="row row-4"></div>
+    <div class="row row-5"></div>
+    <div class="row row-6"></div>
+  </body>
+</html>
